ws add
